--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,9 @@
-title: Streamdata Gallery
-url: aws-cloudtrail.api.streamdata.gallery
+title: Streamdata Gallery AWS CloudTrail
+url: aws-cloudtrail.streamdata.gallery
 tag: AWS CloudTrail
 markdown: kramdown
 exclude: [".rvmrc", ".rbenv-version", "README.md", "Rakefile", "changelog.md", ".DS_Store"]
-github_user: streamdata-gallery-organizations
+github_user: streamdata-gallery
 github_repo: aws-cloudtrail
 github_branch: master
 collections:
